[build-system]
requires = ["setuptools", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Pixee", email = "python@pixee.ai"}]
dynamic = ["version"]
name = "pixee"
requires-python = ">=3.10.0"
readme = "README.md"
license = {file = "LICENSE"}
description = "Pixee CLI"
dependencies = [
    "codemodder",
    "click",
    "prompt-toolkit",
    "questionary~=2.0.0",
    "security~=1.2.0",
]

[project.urls]
Homepage = "https://pixee.ai"

[project.scripts]
pixee = "pixee.cli:main"

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[tool.setuptools]

[tool.setuptools_scm]
version_file = "src/pixee/_version.py"
